# rust-xplm

./: .gitignore  Cargo.toml  README.md
.forgejo/workflows/: ci.yml
src/: command.rs  data.rs  ffi.rs  graphics.rs  lib.rs  menu.rs  plugin.rs  plugin_macro.rs  test_stubs.rs  window.rs
src/data/: borrowed.rs  dynamic.rs  owned.rs  typed.rs  validated.rs
src/data/typed/: borrowed.rs  conv.rs  owned.rs  uom_conv.rs
src/data/validated/: borrowed.rs  owned.rs
src/plugin/: internal.rs  management.rs
