[package]
authors = ["Sam Crow <samcrow@uw.edu>", "Sašo Kiselkov <saso@hotstart.net>"]
name = "xplm"
version = "0.4.3"
license = "MIT/Apache-2.0"
repository = "https://git.hotstart.net/skiselkov/rust-xplm"
keywords = ["X-Plane", "plugin"]
description = "High-level interfaces to the X-Plane plugin SDK"
readme = "README.md"
edition = "2021"

[dependencies]
num = "0.4.3"
xplm-sys = "0.5.0"
thiserror = "1.0.58"

[profile.release]
opt-level = 3
lto = true
incremental = true
codegen-units = 1
strip = "symbols"

[[example]]
name = "minimal"
crate-type = ["cdylib"]

[[example]]
name = "dataref"
crate-type = ["cdylib"]

[[example]]
name = "menus"
crate-type = ["cdylib"]
